# abspathlib

./: abspathlib.py  pyproject.toml
