[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abspathlib"
version = "0.1.1"
description = "AbsPathLib is a library to manage absolute paths replicating pathlib interface"
requires-python = ">=3.6"
license = { text = "LGPLv3+" }
urls = { Homepage = "https://github.com/josemvas/abspathlib" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX",
]

[tool.setuptools]
py-modules = ["abspathlib"]
